--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <meta name="author" content="Augusto Ribeiro">
   <title>Document</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <script
+      src="https://kit.fontawesome.com/0c6d35bbf1.js"
+      crossorigin="anonymous"
+    ></script> <!--font awesome-->
 </head>
 <body>
   <section class="bg-inicio">
@@ -25,6 +29,7 @@
           </ul>
         </nav><!--desktop-menu-->
         <nav class="mobile-menu">
+          <i class="fas fa-bars"></i>
           <ul>
             <li><a class="selected" href="./index.html">home</a></li>
             <li><a href="#">serviços</a></li>
