add font nunito, remove coment desnecessary in index because image and starting to work sessaoNova(h2 +p)

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       src="https://kit.fontawesome.com/0c6d35bbf1.js"
       crossorigin="anonymous"
     ></script> <!--font awesome-->
+  <!--font nunito-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <section class="bg-inicio">
@@ -59,11 +62,17 @@
         </ul>
         <input type="button" action="acao" value="Entre em contato">
       </div><!--lista-chamada-->
-      <div class="image-mobile">
-        <!--<img src="./images/device.png" alt="Foto celular">-->
-      </div>
+      <div class="image-mobile"></div>
       <div class="clear"></div>
     </div><!--container-->
   </section><!--sessao1-->
+  <section class="sessao2">
+    <div class="container">
+      <h2>Desenvolvido por pessoas para pessoas</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse non obcaecati quos expedita numquam assumenda, incidunt, quasi provident maxime totam repellat aut suscipit nulla, voluptas quia culpa quibusdam excepturi a! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit laudantium deserunt, commodi labore, corrupti illo blanditiis velit rerum hic totam reiciendis ut suscipit quae sequi voluptatum vero. Eligendi, similique adipisci?
+      </p>
+    </div><!--container-->
+  </section><!--sessao2-->
 </body>
 </html>
