two new images, some fixes due tue add a new font and inital style for sessaoNova

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <h2>Desenvolvido por pessoas para pessoas</h2>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse non obcaecati quos expedita numquam assumenda, incidunt, quasi provident maxime totam repellat aut suscipit nulla, voluptas quia culpa quibusdam excepturi a! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit laudantium deserunt, commodi labore, corrupti illo blanditiis velit rerum hic totam reiciendis ut suscipit quae sequi voluptatum vero. Eligendi, similique adipisci?
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse non obcaecati quos expedita numquam assumenda, incidunt, quasi provident maxime totam repellat aut suscipit nulla, voluptas quia culpa quibusdam excepturi a! Lorem ipsum dolor sit, amet consectetur.
       </p>
     </div><!--container-->
   </section><!--sessao2-->
