--- a/index.html
+++ b/index.html
@@ -72,7 +72,36 @@
       <p>
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Esse non obcaecati quos expedita numquam assumenda, incidunt, quasi provident maxime totam repellat aut suscipit nulla, voluptas quia culpa quibusdam excepturi a! Lorem ipsum dolor sit, amet consectetur.
       </p>
+      <img src="./images/mockup.jpg" alt="imagem tela do painel administrativo">
     </div><!--container-->
   </section><!--sessao2-->
+  <section class="sessao3">
+    <div class="container">
+      <div class="card-equipe">
+        <div class="wraper-equipe">
+          <h2>Nosso time</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias odit modi nulla expedita adipisci! Pariatur ratione rerum, dolores laborum, harum excepturi ducimus quia numquam, iusto rem odio ea consequuntur quidem.</p>
+        </div><!--wraper-equipe-->
+        <div class="clear"></div>
+      </div><!--card-equipe-->
+      <div class="card-criador">
+        <div class="wraper-criador">
+          <div class="text-criador">
+            <h2>Augusto Ribeiro</h2>
+            <h3>Desenvolvedor</h3>
+          </div><!--text-criador-->
+          <div class="foto-criador"></div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatibus delectus impedit beatae consequatur in molliti!</p>
+        </div><!--wraper-criador-->
+        <div class="slider-criador">
+          <span
+           style="background-color: orangered;"
+          ></span><!--atencao no JS-->
+          <span></span>
+          <span></span>
+        </div><!--slider-criador-->
+      </div><!--card-criador-->
+    </div><!--container-->
+  </section><!--sessao3-->
 </body>
 </html>
