--- a/index.html
+++ b/index.html
@@ -95,13 +95,37 @@
         </div><!--wraper-criador-->
         <div class="slider-criador">
           <span
-           style="background-color: orangered;"
-          ></span><!--atencao no JS-->
+           style="background-color: orangered;">
+          </span><!--atencao no JS-->
           <span></span>
           <span></span>
         </div><!--slider-criador-->
       </div><!--card-criador-->
     </div><!--container-->
   </section><!--sessao3-->
+  <section class="sessao4">
+    <div class="container">
+      <div class="form-contato">
+        <h2>Entre em contato</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident dolorem maxime accusantium excepturi aliquid, quibusdam culpa quo.</p>
+        <form>
+          <input type="text" name="" id="" placeholder="Nome*" required>
+          <input type="email" name="" id="" placeholder="E-mail*" required>
+          <textarea placeholder="Sua Mensagem" name="" id="" cols="30" rows="10"></textarea>
+          <input type="submit" value="Enviar">
+        </form>
+      </div><!--form-contato-->
+      <div class="visita">
+        <h2>Faça uma visita</h2>
+        <div id="maps-visita" class="maps-visita"></div><!--maps-visita-->
+      </div><!--visita-->
+    </div><!--container-->
+  </section><!--sessao4-->
+  <footer>
+    <div class="container">
+      <p>Todos os direitos reservados!</p>
+      <p>augustoribeiro32@gmail.com</p>
+    </div><!--container-->
+  </footer>
 </body>
 </html>
