add google maps in the project

--- a/index.html
+++ b/index.html
@@ -126,5 +126,7 @@
       <p>augustoribeiro32@gmail.com</p>
     </div><!--container-->
   </footer>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpdEo4d5vg62vrnHkMSkfb6n_Qd3KWoM"></script>
+  <script src="./js/functions.js"></script>
 </body>
 </html>
