--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="mobile-menu">
           <i class="fas fa-bars"></i>
           <ul>
-            <li><a class="selected" href="./index.html">home</a></li>
+            <li class="selected"><a href="./index.html">home</a></li>
             <li><a href="#">serviços</a></li>
             <li><a href="#">sobre</a></li>
             <li><a href="#">contato</a></li>
@@ -128,5 +128,12 @@
   </footer>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFpdEo4d5vg62vrnHkMSkfb6n_Qd3KWoM"></script>
   <script src="./js/functions.js"></script>
+  <!--menu-mobile-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+      $('nav.mobile-menu i').click(function(){
+        $('nav.mobile-menu ul').slideToggle();
+      });
+    </script>
 </body>
 </html>
